# airdrop

./: .envrc  .envrc-example  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  addresses.json  atom.json  atom_whales.json  docker-compose.yml  import_extracted_data.sql  kyc.json  remove-dups-etc.pgsql  rune.json  rune_whales.json
exports/: All Token Sale Contribution Codes 3-1.xlsx - Sheet1.csv
extracts/: AirdropPayoutListJune19.md  Final List  about_to_lose.csv  addresses.csv  airdrop_recipients_6_25.csv  coins.csv  community_token_giveaway_submissions.csv  current_not_enough.csv  current_qualified.csv  current_qualified_list.csv  gaia_addresses2.csv  no_action_since_airdrop.csv  permanently_dq_removed_liquidity.csv  token_sale_contribution_codes3.csv
migrations/: 20210301010549_create-table.sql  20210321113649_update-tables.sql  20210322063531_better-twitter-details.sql  20210322064552_cleanup.sql  20210322072938_fix.sql  20210322085315_media_found.sql  20210322104037_token_sale_submittions.sql  20210323021942_token_sale_contributions_codes.sql  20210323231853_tweets_checked.sql  20210323235658_manually_verified.sql  20210324054415_gaia_addresses.sql  20210324104351_add_timestamp.sql  20210325004212_redo_token_sale_code_table.sql  20210325014431_token_sale_submittions.sql  20210325075945_invalid_token_sale_submittions.sql  20210326062456_add_twitter_details_to_token_sale_submittions.sql  20210330003927_add_from_address.sql  20210401010204_valid_rune.sql  20210401071904_validate_rune.sql  20210402215507_add_staker_total_rune.sql  20210402223625_top_20_percent.sql  20210402231911_valid_poolers.sql  20210402232100_valid_KYC.sql  20210408033259_create_gaia_delegators.sql  20210408035750_top_20_delegators.sql  20210408035924_valid_delegators.sql  20210408202841_valid_atom_notweet.sql  20210408203102_valid_atom.sql  20210408203449_valid_kyc_notweet.sql  20210408203544_valid_rune_notweet.sql  20210408203819_valid_rune.sql  20210408204410_valid_delegators_notweet.sql  20210408204440_valid_poolers_notweet.sql  20210408211940_valid_poolers_notweet_clean.sql  20210408212011_valid_poolers_clean.sql  20210408212046_valid_delegators_notweet_clean.sql  20210408212051_valid_delegators_clean.sql
src/: valid_run_in_top_20.pgsql
src/atom/: main.rs
src/atom_tx_extract/: main.rs
src/blockfinder/: atom.rs  main.rs
src/check_twitter/: main.rs
src/import-atom-txs/: main.rs
src/import-rune-pool-extract/: main.rs
src/import-rune-txs/: main.rs
src/import_token_sale_submissions/: main.rs
src/memo_cleaner/: main.rs
src/process_twitter_from_txs_records/: main.rs
src/rune/: main.rs
src/rune_pool_extract/: main.rs
src/rune_tx_extract/: main.rs
src/utils/: address.rs  db.rs  lib.rs  memo.rs  twitter.rs
提取物/: Final List
