[package]
name = "airdrop"
version = "0.1.0"
authors = ["utx0 <utx0@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = ["runtime-tokio-native-tls", "postgres"] }
anyhow = "1.0.38"
chrono = "0.4"
backoff = { version = "0.3.0", features =["tokio", "futures"] }

[[bin]]
name = "atom"
path = "src/atom_tx_extract/main.rs"

[[bin]]
name = "rune"
path = "src/rune_tx_extract/main.rs"

[[bin]]
name = "blockfinder"
path = "src/blockfinder/main.rs"

[lib]
name = "utils"
path = "src/utils/lib.rs"

[[bin]]
name = "rune_pool_extract"
path = "src/rune_pool_extract/main.rs"