[package]
name = "airdrop"
version = "0.1.0"
authors = ["utx0 <utx0@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = ["runtime-tokio-native-tls", "postgres"] }
anyhow = "1.0.38"
chrono = "0.4"
backoff = { version = "0.3.0", features =["tokio", "futures"] }
instant = "0.1.9"
egg-mode = { git ="https://github.com/egg-mode-rs/egg-mode.git",  features = ["rustls"], default-features = false }
colored = "2"
csv = "1.1"
thiserror = "1.0"

[[bin]]
name = "import-token-sale-data"
path = "src/import_token_sale_submissions/main.rs"

[[bin]]
name = "atom"
path = "src/atom_tx_extract/main.rs"

[[bin]]
name = "rune"
path = "src/rune_tx_extract/main.rs"

[[bin]]
name = "blockfinder"
path = "src/blockfinder/main.rs"

[lib]
name = "utils"
path = "src/utils/lib.rs"

[[bin]]
name = "rune_pool_extract"
path = "src/rune_pool_extract/main.rs"

[[bin]]
name = "memo_cleaner"
path = "src/memo_cleaner/main.rs"

[[bin]]
name = "check_twitter"
path = "src/check_twitter/main.rs"